--- a/templates/leSekoya/base.html.twig
+++ b/templates/leSekoya/base.html.twig
@@ -150,7 +150,7 @@
 
   {% endblock %}
   <!--================ Start footer Area  =================-->
-  <footer class="footer ">
+  <footer class="footer mt-3">
     <div class="footer-area bg-1">
       <div class="container">
         <div class="row section_gap">
@@ -165,7 +165,7 @@
               </p>
             </div>
           </div>
-          <div class="offset-lg-1 col-lg-2 col-md-6 col-sm-6">
+          <div class="offset-lg-2 col-lg-2 col-md-6 col-sm-6">
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title">{{'Quick Links'|trans}}</h4>
               <ul class="list">
@@ -176,20 +176,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-2 col-md-6 col-sm-6">
-            <div class="single-footer-widget instafeed">
-              <h4 class="footer_title">{{'Gallery'|trans}}</h4>
-              <ul class="list instafeed d-flex flex-wrap">
-                <li><img src="img/gallery/r1.jpg" alt=""></li>
-                <li><img src="img/gallery/r2.jpg" alt=""></li>
-                <li><img src="img/gallery/r3.jpg" alt=""></li>
-                <li><img src="img/gallery/r5.jpg" alt=""></li>
-                <li><img src="img/gallery/r7.jpg" alt=""></li>
-                <li><img src="img/gallery/r8.jpg" alt=""></li>
-              </ul>
-            </div>
-          </div>
-          <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
+          <div class="offset-lg-2 col-lg-3 col-md-6 col-sm-6">
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title">{{'Contact Us'|trans}}</h4>
               <div class="ml-40">
@@ -244,7 +231,7 @@
 
 
   <script src="{{ asset('vendor/jquery/jquery-3.2.1.min.js') }}"></script>
-  <script src="{{ asset('vendor/bootstrap/bootstrap.bundle.min.js') }}"></script>
+  <script src="{{ asset('vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
   <script src="{{ asset('vendor/skrollr.min.js') }}"></script>
   <script src="{{ asset('vendor/owl-carousel/owl.carousel.min.js') }}"></script>
   <script src="{{ asset('vendor/nice-select/jquery.nice-select.min.js') }}"></script>
