--- a/templates/leSekoya/shop/show.html.twig
+++ b/templates/leSekoya/shop/show.html.twig
@@ -1,15 +1,12 @@
 {% extends "leSekoya/base.html.twig" %}
-{% block title %}{{ article.title }} | {{ app_name }} {% endblock %}
+{% block title %}{{ article.title }} {% endblock %}
 {% block body %}
 
-<pre>
-	{{ dump(article) }}
-</pre>
 <nav class="breadcrumb">
 	<a class="breadcrumb-item" href="/">{{'Home'|trans}}</a>
 	<a class="breadcrumb-item" href="{{ path('articles') }}">{{'Shop'|trans}}</a>
-	<a class="breadcrumb-item" href="{{ path('articles',{category: article.category.id }) }}">{{ article.category.title
-		}}</a>
+	<a class="breadcrumb-item" href="{{ path('articles',{category: article.category.parentCategory.name }) }}">{{ article.category.parentCategory.name	}}</a>
+	<a class="breadcrumb-item" href="{{ path('articles',{category: article.category.id }) }}">{{ article.category.title	}}</a>
 	<span class="breadcrumb-item active">{{'Shop'|trans}}</span>
 </nav>
 <!--================Single Product Area =================-->
@@ -20,7 +17,7 @@
 				<div class="owl-carousel owl-theme s_Product_carousel">
 					{% for item in article.images|slice(0,1) %}
 					<div class="single-prd-item">
-						<img class="img-fluid" src="{{ asset('img/article/' ~ item.name ) }}" alt="{{ article.title }}">
+						<img class="img-fluid" src="{{ asset('img/article/' ~ item.name|default('vide.png') ) }}" alt="{{ article.title }}">
 					</div>
 					{% endfor %}
 				</div>
@@ -334,111 +331,7 @@
 			<p>Popular Item in the market</p>
 			<h2>Top <span class="section-intro__style">Product</span></h2>
 		</div>
-		<div class="row mt-30">
-			<div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-				<div class="single-search-product-wrapper">
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-1.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-2.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-3.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-				<div class="single-search-product-wrapper">
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-4.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-5.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-6.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-				<div class="single-search-product-wrapper">
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-7.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-8.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-9.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-				<div class="single-search-product-wrapper">
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-1.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-2.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-					<div class="single-search-product d-flex">
-						<a href="#"><img src="img/product/product-sm-3.png" alt=""></a>
-						<div class="desc">
-							<a href="#" class="title">Gray Coffee Cup</a>
-							<div class="price">$170.00</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		    {% include "leSekoya/shop/_top_article.html.twig" %}
 	</div>
 </section>
 <!--================ end related Product area =================-->
