--- a/templates/admin/article/_datatable.html.twig
+++ b/templates/admin/article/_datatable.html.twig
@@ -1,61 +1,72 @@
-<table id="datatable_{{id}}" class="table table-bordered table-striped">
+<table id="datatable_{{id}}" class="table table-bordered">
     <thead>
-    <tr>
-        <th>Nom</th>
-        <th>Prix d'achat</th>
-        <th>Prix</th>
-        <th>Quantité</th>
-        <th>Description</th>
-        <th>Crée </th>
-        <th>Edité  </th>
-        <th>Action</th>
-    </tr>
+        <tr>
+            <th>Nom</th>
+            <th>Catégorie</th>
+            <th>Quantite</th>
+            <th>Prix</th>
+            <th>Action</th>
+        </tr>
     </thead>
     <tbody>
-    {% for item in articles %}
-    <tr>
-        <td>#{{ item.id}} {{ item.title}}</td>
-        <td>{{ item.formatterBuying}}</td>
-        <td>{{ item.formatterPrice}}</td>
-        <td>{{ item.quantity}}</td>
-        <td>{{ item.description}}</td>
-        <td>{{ item.createdAt|date_format_fr|trans }}</td>
-        <td>
-        {% if item.updatedAt %} 
-        {{ item.updatedAt|date_format_fr|trans }}
-        {% else %}
-        Not modify
-        {% endif %}
-        </td>
-        <td>
-        
-        <a href="{{ path('article_show',{id: item.id} ) }}" class="btn">
-            <i class="fa fa-eye text-dark" aria-hidden="true"></i>
-        </a>
-        <a href="{{ path('article_edit',{id: item.id} ) }}" class="btn">
-            <i class="fas fa-edit text-success"></i>
-        </a>
-        {% if is_granted('ROLE_ADMIN') %}
-        <form class="d-inline-block" method="post" action="{{ path('article_delete', {'id': item.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
-            <button class="btn"><i class="fas fa-trash-alt  text-danger  "></i></button>
-        </form>
-        {% endif %}
-        
-        </td>
-    </tr>
-    {% endfor %}
+        {% for item in articles %}
+        <tr>
+            <td>
+                <a class="c-1" href="{{ path('article_show',{id: item.id} ) }}">
+                    #{{ item.id}} {{ item.title}} </br>
+                    {{ item.description}}
+                </a>
+            </td>
+            <td>{{ item.category.title }}</td>
+
+            <td>
+                En stock: {{ item.quantity }} </br>
+                Réel: {{ item.qtyReel }}
+            </td>
+            <td>
+                Achat: {{ item.formatterBuying}} </br>
+                De vente: {{ item.formatterPrice}}</td>
+            <td>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default">Action</button>
+                    <button type="button" class="btn btn-default dropdown-toggle dropdown-icon" data-toggle="dropdown"
+                        aria-expanded="false">
+                        <span class="sr-only">Toggle Dropdown</span>
+                    </button>
+                    <div class="dropdown-menu" role="menu">
+                        <a href="{{ path('article_show',{id: item.id} ) }}" class="dropdown-item">
+                            <i class="fa fa-eye text-dark" aria-hidden="true"></i> Voir
+                        </a>
+                        <a href="{{ path('article_edit',{id: item.id} ) }}" class="dropdown-item">
+                            <i class="fas fa-edit text-success"></i> Editer
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        {% if is_granted('ROLE_ADMIN') %}
+                        <form class="d-inline-block" method="post"
+                            action="{{ path('article_delete', {'id': item.id}) }}"
+                            onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
+                            <button class="btn"><i class="fas fa-trash-alt  text-danger  "></i> Suprimmer</button>
+                        </form>
+                        {% endif %}
+                    </div>
+                </div>
+
+
+
+            </td>
+        </tr>
+        {% endfor %}
     </tbody>
-        <tfoot>
+    {# <tfoot>
         <tr>
             <th>Nom</th>
             <th>Prix d'achat</th>
             <th>Prix</th>
             <th>Quantité</th>
             <th>Description</th>
-            <th>Crée </th>
-            <th>Edité  </th>
+            <th>Edité </th>
             <th>Action</th>
         </tr>
-        </tfoot>
+    </tfoot> #}
 </table>
