--- a/templates/admin/article/new.html.twig
+++ b/templates/admin/article/new.html.twig
@@ -2,12 +2,12 @@
 {% import "macros/head.html.twig" as head %}
 {% import "macros/foot.html.twig" as foot %}
 {% import "macros/breadcrumb.html.twig" as utils %}
-{% import "macros/alertes.html.twig" as alerte %}
+{% import "macros/alertes.html.twig" as alertes %}
 {% import "macros/button.html.twig" as btn %}
 
 {% extends 'admin/base.html.twig' %}
 
-{% block title %}New Article | {{ app_name}} {% endblock %}
+{% block title %}New Article{% endblock %}
 
 {% block head %}
       <!-- summernote -->
@@ -22,15 +22,16 @@
 {% block breadcrumb %}
     {{ utils.breadcrumb(action_text,[
         {
-            path:'article_index',
+            path:path('article_index'),
             name:'Manage Articles'
         }
     ])}}
 {% endblock %}
 
 {% block body %}
-<a class="btn btn-dark m-2" href="{{ path('article_index') }}">back to list <i class="fa fa-arrow-circle-left" aria-hidden="true"></i> </a>
-
+{% for item in app.flashes('success') %}
+  {{ alertes.alert(item,'success')}}
+{% endfor %}
 <div class="row">
     <div class="col-md-12">
         <div class="card card-outline card-primary">
@@ -38,42 +39,20 @@
                 <h4>{{ action_text }}</h4>
             </div>
             <div class="card-body">
-
-                {{ include('admin/article/_form.html.twig',{button_label:action}) }}
-                <a class="btn btn-light mt-2" href="{{ path('article_index') }}">back to list <i class="fa fa-arrow-circle-left" aria-hidden="true"></i> </a>
+                <div class="row">
+                    <div class="col-md-8">
+                        {{ include('admin/article/_form.html.twig',{button_label:action}) }}
+                    </div>
+                    <div class="col-md-3">
+                    
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     {% if app.request.attributes.get('_route') == 'article_edit' %}
     <div class="col-md-6">
         <div class="row">
-            <div class="col-md-12">
-                <div class="card card-outline card-dark">
-                    <div class="card-header">
-                        <h4>Manage Image</h4>
-                    </div>
-                    <div class="card-body">
-                    {# verifier si la route est edit #}
-                    {% if app.request.attributes.get('_route') == 'article_edit' %}
-                        <div class="row">
-                    {% for image in article.images %}
-                            <div class="col-md-4 col-12">
-                                <div class="card">
-                                    <img src="{{ asset('/img/article/' ~ image.name)}}" class="card-img-top" alt="image" width="100" >
-                                        <a class="btn" href="{{ path('article_delete_image', {id: image.id}) }}"
-                                            data-delete  data-token="{{ csrf_token('delete' ~ image.id) }}"
-                                        > <i class="fas fa-trash-alt  text-danger "></i> </a>
-                                </div>
-                            </div>
-                    {% else %}
-                        <p>Le article ne possede pas d'image</p>
-                    {% endfor %}
-                        </div>
-                    
-                    {% endif %}
-                    </div>
-                </div>
-            </div>
             {% if app.request.attributes.get('_route') == 'article_edit' %}
             <div class="col-md-12">
                 <div class="card card-outline card-dark">
