--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -16,18 +16,77 @@
   <!-- Select2 -->
   <link rel="stylesheet" href="{{ asset('vendor/select2/css/select2.min.css') }}">
   <link rel="stylesheet" href="{{ asset('vendor/select2-bootstrap4-theme/select2-bootstrap4.min.css') }}">
+    <!-- Google Font: Source Sans Pro -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <!-- overlayScrollbars -->
+  <link rel="stylesheet" href="{{ asset('vendor/overlayScrollbars/css/OverlayScrollbars.min.css') }}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{{ asset('css/adminlte.min.css') }}">
   {% block head %}{% endblock %}
 
 </head>
 <style>
+
+#demo {
+  height:100%;
+  position:relative;
+  overflow:hidden;
+}
+
+
+.green{
+  background-color:#6fb936;
+}
+        .thumb{
+            margin-bottom: 30px;
+        }
+        
+        .page-top{
+            margin-top:85px;
+        }
+
+   
+img.zoom {
+    width: 100%;
+    height: 200px;
+    border-radius:5px;
+    object-fit:cover;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+}
+        
+ 
+.transition {
+    -webkit-transform: scale(1.2); 
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+}
+    .modal-header {
+   
+     border-bottom: none;
+}
+    .modal-title {
+        color:#000;
+    }
+    .modal-footer{
+      display:none;  
+    }
+
   #js-editor {
     display: none;
   }
 
   .gallery img {
     width: 100px;
+  }
+  .c-1{
+    color: #000!important;
+  }
+  .c-1:hover{
+    color:  #0069d9!important;
   }
 </style>
 
@@ -62,7 +121,7 @@
           <div class="navbar-search-block">
             <form class="form-inline">
               <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control form-control-navbar" type="search" placeholder="{{'Search'|trans}}" aria-label="Search">
                 <div class="input-group-append">
                   <button class="btn btn-navbar" type="submit">
                     <i class="fas fa-search"></i>
@@ -215,14 +274,13 @@
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-
-            {{ nav.section('Dashboard',{icon: 'fas fa-tachometer-alt',pages:navs.getNavs.dashboard})}}
-
-            {{ nav.list(navs.getNavs.user,'User',parent_page|default('')) }}
+            {{ nav.list(navs.getNavs.dashboard,'',parent_page|default('')) }}
+            {% if is_granted('ROLE_USER') %}
+              {{ nav.list(navs.getNavs.user,'',parent_page|default('')) }}
+            {% endif %}
 
             {% if is_granted('ROLE_ADMIN') %}
-            {{ nav.list(navs.getNavs.admin,'Admin',parent_page|default('')) }}
-            {# {{ nav.section('Admin',{role:'Admin',icon: 'fas fa-cogs',pages:navs.getNavs.admin})}} #}
+              {{ nav.list(navs.getNavs.admin,'',parent_page|default('')) }}
             {% endif %}
 
             {{ nav.li({path:'app_logout',name:'log out',icon:'fas fa-power-off'}) }}
@@ -250,7 +308,7 @@
     <!-- /.content-wrapper -->
     {% block footer %}
     <footer class="main-footer">
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
+      <strong>Copyright &copy; 2021 <a href="{{ site.link }}">{{ app_name}}.io</a>.</strong>
       All rights reserved.
       <div class="float-right d-none d-sm-inline-block">
         <b>Version</b> 3.1.0
@@ -281,6 +339,18 @@
   <script src="{{ asset('js/adminlte.js') }}"></script>
   <!-- Select2 -->
   <script src="{{ asset('vendor/select2/js/select2.full.min.js') }}"></script>
+  <!-- overlayScrollbars -->
+  <script src="{{ asset('vendor/overlayScrollbars/js/jquery.overlayScrollbars.min.js') }}"></script>
+  <!-- AdminLTE App -->
+
+  <!-- PAGE PLUGINS -->
+  <!-- jQuery Mapael -->
+  <script src="{{ asset('vendor/jquery-mousewheel/jquery.mousewheel.js') }}"></script>
+  <script src="{{ asset('vendor/raphael/raphael.min.js') }}"></script>
+  <script src="{{ asset('vendor/jquery-mapael/jquery.mapael.min.js') }}"></script>
+  <script src="{{ asset('vendor/jquery-mapael/maps/usa_states.min.js') }}"></script>
+  <!-- ChartJS -->
+  <script src="{{ asset('vendor/chart.js/Chart.min.js') }}"></script>
   <script>
     $(document).ready(function () {
       //Initialize Select2 Elements
