--- a/templates/admin/shipping_amount/index.html.twig
+++ b/templates/admin/shipping_amount/index.html.twig
@@ -3,23 +3,22 @@
 {% import "macros/foot.html.twig" as foot %}
 {% import "macros/breadcrumb.html.twig" as utils %}
 {% import "macros/alertes.html.twig" as alerte %}
-{% import "macros/button.html.twig" as btn %}
 {% import "macros/link.html.twig" as link %}
 
 {% extends 'admin/base.html.twig' %}
 
 
 {% block stylesheets %}
-  {{ head.dataTable() }}
+{{ head.dataTable() }}
 {% endblock %}
 
 {% block breadcrumb %}
-    {{ utils.breadcrumb('Manage Order',[
-        {
-            path:'order_index',
-            name:'Manage orders'
-        }
-    ])}}
+{{ utils.breadcrumb('Manage Order',[
+{
+path:'order_index',
+name:'Manage orders'
+}
+])}}
 {% endblock %}
 
 {% block title %}Manage ShippingAmount | {{ app_name }} {% endblock %}
@@ -30,68 +29,40 @@
     <div class="card-header">
         <h3 class="card-title">
             <i class="fas fa-edit"></i>
-                ShippingAmount index
-
+            ShippingAmount index
         </h3>
     </div>
     <div class="card-body">
-        <h4>Left Sided</h4>
-        <div class="row">
-            <div class="col-5 col-sm-3">
-                <div class="nav flex-column nav-tabs h-100" id="vert-tabs-tab" role="tablist" aria-orientation="vertical">
-                    {% for key, item in shipping_amounts %}
-                        <a class="nav-link {{ key == 0 ? 'active':'' }} " id="vert-tabs-home-tab" data-toggle="pill" href="#vert-tabs-home" role="tab" aria-controls="vert-tabs-home" aria-selected="false">{{ item.amount }}  </a>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Rues</th>
+                    <th>Amount</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for shipping_amount in shipping_amounts %}
+                <tr>
+                    <td>
+                    {% for item in shipping_amount.street %}
+                        {{ item.name }}
                     {% endfor %}
-                </div>
-            </div>
-            <div class="col-7 col-sm-9">
-            <div class="tab-content" id="vert-tabs-tabContent">
-                {% for item in shipping_amounts %}
-                    <div class="tab-pane text-left fade" id="vert-tabs-home" role="tabpanel" aria-labelledby="vert-tabs-home-tab">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Id</th>
-                                <th>Amount</th>
-                                <th>actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        {% for shipping_amount in shipping_amounts %}
-                            <tr>
-                                <td>{{ shipping_amount.id }}</td>
-                                <td>{{ shipping_amount.amount }}</td>
-                                <td>
-                                    <a href="{{ path('shipping_amount_show', {'id': shipping_amount.id}) }}">show</a>
-                                    <a href="{{ path('shipping_amount_edit', {'id': shipping_amount.id}) }}">edit</a>
-                                </td>
-                            </tr>
-                        {% else %}
-                            <tr>
-                                <td colspan="3">no records found</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                    </td>
+                    <td>{{ shipping_amount.amount }}</td>
+                    <td>
+                        <a href="{{ path('shipping_amount_show', {'id': shipping_amount.id}) }}">show</a>
+                        <a href="{{ path('shipping_amount_edit', {'id': shipping_amount.id}) }}">edit</a>
+                    </td>
+                </tr>
+                {% else %}
+                <tr>
+                    <td colspan="3">no records found</td>
+                </tr>
                 {% endfor %}
-                
-                <div class="tab-pane fade" id="vert-tabs-profile" role="tabpanel" aria-labelledby="vert-tabs-profile-tab">
-                    Mauris tincidunt mi at erat gravida, eget tristique urna bibendum. Mauris pharetra purus ut ligula tempor, et vulputate metus facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas sollicitudin, nisi a luctus interdum, nisl ligula placerat mi, quis posuere purus ligula eu lectus. Donec nunc tellus, elementum sit amet ultricies at, posuere nec nunc. Nunc euismod pellentesque diam.
-                </div>
-                <div class="tab-pane fade" id="vert-tabs-messages" role="tabpanel" aria-labelledby="vert-tabs-messages-tab">
-                    Morbi turpis dolor, vulputate vitae felis non, tincidunt congue mauris. Phasellus volutpat augue id mi placerat mollis. Vivamus faucibus eu massa eget condimentum. Fusce nec hendrerit sem, ac tristique nulla. Integer vestibulum orci odio. Cras nec augue ipsum. Suspendisse ut velit condimentum, mattis urna a, malesuada nunc. Curabitur eleifend facilisis velit finibus tristique. Nam vulputate, eros non luctus efficitur, ipsum odio volutpat massa, sit amet sollicitudin est libero sed ipsum. Nulla lacinia, ex vitae gravida fermentum, lectus ipsum gravida arcu, id fermentum metus arcu vel metus. Curabitur eget sem eu risus tincidunt eleifend ac ornare magna.
-                </div>
-                <div class="tab-pane fade active show" id="vert-tabs-settings" role="tabpanel" aria-labelledby="vert-tabs-settings-tab">
-                    Pellentesque vestibulum commodo nibh nec blandit. Maecenas neque magna, iaculis tempus turpis ac, ornare sodales tellus. Mauris eget blandit dolor. Quisque tincidunt venenatis vulputate. Morbi euismod molestie tristique. Vestibulum consectetur dolor a vestibulum pharetra. Donec interdum placerat urna nec pharetra. Etiam eget dapibus orci, eget aliquet urna. Nunc at consequat diam. Nunc et felis ut nisl commodo dignissim. In hac habitasse platea dictumst. Praesent imperdiet accumsan ex sit amet facilisis.
-                </div>
-            </div>
-        </div>
+            </tbody>
+        </table>
     </div>
 </div>
 <!-- /.card -->
-
-
-
-    <a href="{{ path('shipping_amount_new') }}">Create new</a>
 {% endblock %}
