--- a/templates/admin/street/index.html.twig
+++ b/templates/admin/street/index.html.twig
@@ -6,21 +6,26 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
+            <div class="card-header">
+                <h3>Street</h3>
+            </div>
             <div class="card-body">
-                <h1>Street index</h1>
-                <table class="table">
+                <div class="btn-group">
+                    <a class="btn btn-primary" href="{{ path('street_new') }}">Create new</a>
+                </div>
+                <table id="table" class="table">
                     <thead>
                         <tr>
-                            <th>Id</th>
                             <th>Name</th>
+                            <th>Livraison</th>
                             <th>actions</th>
                         </tr>
                     </thead>
                     <tbody>
                     {% for street in streets %}
                         <tr>
-                            <td>{{ street.id }}</td>
                             <td>{{ street.name }}</td>
+                            <td>{{ street.shippingAmount.amount|number_format(0,'',' ') }}</td>
                             <td>
                                 <a href="{{ path('street_show', {'id': street.id}) }}">show</a>
                                 <a href="{{ path('street_edit', {'id': street.id}) }}">edit</a>
@@ -33,8 +38,6 @@
                     {% endfor %}
                     </tbody>
                 </table>
-
-                <a href="{{ path('street_new') }}">Create new</a>
             </div>
         </div>
     </div>
