--- a/templates/admin/user/new.html.twig
+++ b/templates/admin/user/new.html.twig
@@ -1,15 +1,21 @@
 {% extends 'admin/base.html.twig' %}
-
+{% import "macros/breadcrumb.html.twig" as breadcrumb %}
 {% block title %}New User{% endblock %}
+{% block breadcrumb %}
+    {{ breadcrumb.breadcrumb('Manage user'|trans,[
+        {
+            path:'order_index',
+            name:'Manage orders'
+        }
+    ])}}
+{% endblock %}
 {% block body %}
-<div class="card">
+<div class="card card-outline card-primary">
     <div class="card-header">
-        <h3>Create new User</h3>
+        <h3>{{'Create new User'|trans}}</h3>
     </div>
     <div class="card-body">
         {{ include('admin/user/_form.html.twig') }}
-
-        <a href="{{ path('user_index') }}">back to list</a>
     </div>
 </div>
 {% endblock %}
