--- a/templates/leSekoya/cart/index.html.twig
+++ b/templates/leSekoya/cart/index.html.twig
@@ -18,9 +18,9 @@
 
 </style>
 <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="{{ path('home') }}">Home</a></li>
-    <li class="breadcrumb-item"><a href="{{ path('articles') }}">Shop</a></li>
-    <li class="breadcrumb-item active">Cart</li>
+    <li class="breadcrumb-item"><a href="{{ path('home') }}">{{'Home'|trans}}</a></li>
+    <li class="breadcrumb-item"><a href="{{ path('articles') }}">{{'Shop'|trans}}</a></li>
+    <li class="breadcrumb-item active">{{'Cart'|trans}}</li>
 </ol>
 {# {{ search.search(form) }} #}
 
@@ -204,14 +204,11 @@
               <div class="col-lg-4">
                 <div class="row">
                 <div class="col-lg-12">
-<<<<<<< HEAD
-=======
                   {% if app.request.session.get('shipping') %}
                     <h5>Total : <span class="text-danger" id="total"> {{ (total + delivery.shippingAmount.amount)|number_format(2,'.',' ') }} {{ site.current }} </span> </h5>
                   {% else %}
                     <h5>Total : <span class="text-danger" id="total"></span> </h5>
                   {% endif %}
->>>>>>> 1d10c62732491b09ce9d87a7852c87195dfe8215
                 </div>
                   <div class="col text-center mb-2">
                       <a class="gray_btn btn-primary w-100" href="{{ path('articles') }}">Continue Shopping</a>
