--- a/templates/leSekoya/home/index.html.twig
+++ b/templates/leSekoya/home/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "leSekoya/base.html.twig" %}
-{% block title %}Home{% endblock %}
+{% block title %}{{'Home'|trans}}{% endblock %}
 {% block body %}
 <main class="site-main">
 
@@ -19,7 +19,7 @@
             <p>{{"Us which over of signs divide dominion deep fill bring they're meat beho upon own earth without
               morning
               over third. Their male dry. They are great appear whose land fly grass."|trans}}</p>
-            <a class="button button-hero" href="{{ path('articles') }}">{{'Acheter maintenant'|trans}}</a>
+            <a class="button button-hero" href="{{ path('articles') }}">{{'Buy Now'|trans}}</a>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="section-intro pb-60px">
         <p>{{'Popular Item in the market'|trans}}</p>
-        <h2>Trending <span class="section-intro__style">Product</span></h2>
+        <h2>{{ 'Trending <span class="section-intro__style">Product</span>'|trans|raw}}</h2>
       </div>
       <div class="row">
         {% for item in top_articles %}
@@ -95,8 +95,8 @@
   <section class="section-margin calc-60px">
     <div class="container">
       <div class="section-intro pb-60px">
-        <p>Popular Item in the market</p>
-        <h2>Best <span class="section-intro__style">Sellers</span></h2>
+        <p>{{'Popular Item in the market'|trans}}</p>
+        <h2>{{'Best <span class="section-intro__style">Sellers</span>'|trans|raw}}</h2>
       </div>
       <div class="owl-carousel owl-theme" id="bestSellerCarousel">
         {% for item in rand_articles %}
@@ -108,7 +108,7 @@
   <!-- ================ Best Selling item  carousel end ================= -->
 
   <!-- ================ Subscribe section start ================= -->
-  <section class="subscribe-position">
+  {# <section class="subscribe-position">
     <div class="container">
       <div class="subscribe text-center">
         <h3 class="subscribe__title">Get Update From Anywhere</h3>
@@ -132,7 +132,7 @@
 
       </div>
     </div>
-  </section>
+  </section> #}
   <!-- ================ Subscribe section end ================= -->
 </main>
 {% endblock %}
