--- a/templates/leSekoya/shop/index.html.twig
+++ b/templates/leSekoya/shop/index.html.twig
@@ -1,306 +1,142 @@
-
 {% import "macros/search.html.twig" as search %}
 
 {% extends "leSekoya/base.html.twig" %}
 {% block title %}Shop{% endblock %}
 
 {% block body %}
-  <nav class="breadcrumb">
-    <a class="breadcrumb-item" href="/">Home</a>
-    <span class="breadcrumb-item active">Shop</span>
-  </nav>
-	<!-- ================ start banner area ================= -->	
-	{# <section class="blog-banner-area" id="category">
-		<div class="container h-100">
-			<div class="blog-banner">
-				<div class="text-center">
-					<h1>Shop Category</h1>
-					<nav aria-label="breadcrumb" class="banner-breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Shop Category</li>
-            </ol>
-          </nav>
-				</div>
-			</div>
-    </div>
-	</section> #}
-	<!-- ================ end banner area ================= -->
+<style>
 
-	<!-- ================ category section start ================= -->		  
-  <section class="section-margin--small mt-2 mb-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-3 col-lg-4 col-md-5">
-          <div class="sidebar-categories">
-            <div class="head">Browse Categories</div>
-            <ul class="main-categories">
-              <li class="common-filter">
-                <form action="#">
-                  <ul>
-                    <li class="filter-list">
-                      <input class="pixel-radio" {{ app.request.get('category') == null ? 'checked':'' }} type="radio" name="brand">
-                      <label for="men"><a style="color:#777" href="{{ path('articles') }}">Toutes les categories <span> ({{ category|length}})</span></a></label>
-                    </li>
-                    {% for item in category %}
-                    <li class="filter-list">
-                      <input class="pixel-radio" {{ item.id == app.request.get('category') ? 'checked':'' }} type="radio" data-id="{{ item.id }}" name="brand">
-                      <label for="men"><a style="color:#777" href="?category={{ item.id }}">{{ item.title }}<span> ({{item.articles|length}})</span></a></label>
-                    </li>
-                    {% endfor %}
-                    {# <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="women" name="brand">
-                      <label for="women">Women<span> (3600)</span></label>
-                    </li> #}
-                    {# <li class="filter-list"><input class="pixel-radio" type="radio" id="accessories" name="brand"><label for="accessories">Accessories<span> (3600)</span></label></li>
-                    <li class="filter-list"><input class="pixel-radio" type="radio" id="footwear" name="brand"><label for="footwear">Footwear<span> (3600)</span></label></li>
-                    <li class="filter-list"><input class="pixel-radio" type="radio" id="bayItem" name="brand"><label for="bayItem">Bay item<span> (3600)</span></label></li>
-                    <li class="filter-list"><input class="pixel-radio" type="radio" id="electronics" name="brand"><label for="electronics">Electronics<span> (3600)</span></label></li>
-                    <li class="filter-list"><input class="pixel-radio" type="radio" id="food" name="brand"><label for="food">Food<span> (3600)</span></label></li> #}
-                  </ul>
-                </form>
+  @media (max-width: 991px) {
+    nav.categories ul ul{
+    position: absolute;
+    left: 25px;
+    min-width: 250px;
+    top: 0;
+    display: none;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
+    z-index: 99;
+    }
+  }
+  nav.categories {
+    width: 255px;
+  }
+
+  nav.categories ul ul {
+    position: absolute;
+    left: 255px;
+    min-width: 250px;
+    top: 0;
+    display: none;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
+    z-index: 99;
+  }
+
+  nav.categories ul span {
+    position: absolute;
+    right: 20px;
+    top: -5px;
+    font-size: 1.5em;
+  }
+
+  nav.categories ul li a {
+    font-size: 1.15em;
+    text-transform: capitalize;
+    padding: 10px 30px;
+    height: 50px;
+  }
+
+  nav.categories ul li {
+    border-bottom: 1px solid #ededed;
+    transition: all 0.4s linear;
+  }
+
+  nav.categories ul li:hover {
+    background: #01796F;
+  }
+
+  nav.categories ul .dropdown:hover {
+    background: #01796F
+  }
+
+  nav.categories ul .dropdown:hover ul {
+    display: initial;
+  }
+</style>
+<nav class="breadcrumb">
+  <a class="breadcrumb-item" href="/">{{'Home'|trans}}</a>
+  <span class="breadcrumb-item active">{{'Shop'|trans}}</span>
+</nav>
+<!-- ================ category section start ================= -->
+<section class="section-margin--small mt-2 mb-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-3 col-lg-4 col-md-5">
+        <div class="sidebar-categories">
+          <div class="head">{{'Categorys'|trans}}</div>
+          <nav class="categories">
+            <ul>
+              {% for item in category_parents %}
+              <li class="dropdown">
+                <a href="#">{{ item.name }} ({{item.categorys|length}}) <span>&rsaquo;</span></a>
+                <ul>
+                  {% for item in item.categorys %}
+                  <li><a href="?category={{ item.id }}">{{ item.title }} ({{item.articles|length}})</a></li>
+                  {% endfor %}
+                </ul>
+                {# <input class="pixel-radio" {{ item.id==app.request.get('category') ? 'checked' :'' }} type="radio"
+                  data-id="{{ item.id }}" name="brand"> #}
+                {# <label for="men"><a style="color:#777" href="?category={{ item.id }}">{{ item.name }}<span>
+                      (0)</span></a></label> #}
               </li>
+              {% endfor %}
             </ul>
-          </div>
-          
-          {# <div class="sidebar-filter">
-            <div class="top-filter-head">Product Filters</div>
-            <div class="common-filter">
-              <div class="head">Brands</div>
-              <form action="#">
-                <ul>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="apple" name="brand"><label for="apple">Apple<span>(29)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="asus" name="brand"><label for="asus">Asus<span>(29)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="gionee" name="brand"><label for="gionee">Gionee<span>(19)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="micromax" name="brand"><label for="micromax">Micromax<span>(19)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="samsung" name="brand"><label for="samsung">Samsung<span>(19)</span></label></li>
-                </ul>
-              </form>
-            </div>
-            <div class="common-filter">
-              <div class="head">Color</div>
-              <form action="#">
-                <ul>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="black" name="color"><label for="black">Black<span>(29)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="balckleather" name="color"><label for="balckleather">Black
-                      Leather<span>(29)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="blackred" name="color"><label for="blackred">Black
-                      with red<span>(19)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="gold" name="color"><label for="gold">Gold<span>(19)</span></label></li>
-                  <li class="filter-list"><input class="pixel-radio" type="radio" id="spacegrey" name="color"><label for="spacegrey">Spacegrey<span>(19)</span></label></li>
-                </ul>
-              </form>
-            </div>
-            <div class="common-filter">
-              <div class="head">Price</div>
-              <div class="price-range-area">
-                <div id="price-range"></div>
-                <div class="value-wrapper d-flex">
-                  <div class="price">Price:</div>
-                  <span>$</span>
-                  <div id="lower-value"></div>
-                  <div class="to">to</div>
-                  <span>$</span>
-                  <div id="upper-value"></div>
-                </div>
-              </div>
-            </div>
-          </div> #}
+          </nav>
         </div>
-        <div class="col-xl-9 col-lg-8 col-md-7">
+      </div>
+      <div class="col-xl-9 col-lg-8 col-md-7">
         <!-- Search bar -->
         {{ search.search(form) }}
 
-          <!-- Start Filter Bar -->
-          {# <div class="filter-bar d-flex flex-wrap align-items-center">
-            <div class="sorting">
-              <select>
-                <option value="1">Default sorting</option>
-                <option value="1">Default sorting</option>
-                <option value="1">Default sorting</option>
-              </select>
+        <!-- Start Best Seller -->
+        <section class="lattest-product-area pb-40 category-list">
+          <div class="row">
+            {% for item in articles %}
+            <div class="col-md-6 col-lg-4 ">
+              {% include "leSekoya/shop/_article.html.twig" %}
             </div>
-            <div class="sorting mr-auto">
-              <select>
-                <option value="1">Show 12</option>
-                <option value="1">Show 12</option>
-                <option value="1">Show 12</option>
-              </select>
-            </div>
-            <div>
-              <div class="input-group filter-bar-search">
-                <input type="text" placeholder="Search">
-                <div class="input-group-append">
-                  <button type="button"><i class="ti-search"></i></button>
-                </div>
-              </div>
-            </div>
-          </div> #}
-          <!-- End Filter Bar -->
-          <!-- Start Best Seller -->
-          <section class="lattest-product-area pb-40 category-list">
-            <div class="row">
-              {% for item in articles %}
-                <div class="col-md-6 col-lg-4 ">    
-                  {% include "leSekoya/shop/_article.html.twig" %}  
-                </div>
-              {% endfor %}
-            </div>
-            {{ knp_pagination_render(articles) }}
-          </section>
-          <!-- End Best Seller -->
-        </div>
+            {% endfor %}
+          </div>
+          {{ knp_pagination_render(articles) }}
+        </section>
+        <!-- End Best Seller -->
       </div>
     </div>
-  </section>
-	<!-- ================ category section end ================= -->		  
-  
-	<!-- ================ top product area start ================= -->	
-	<section class="related-product-area">
-		<div class="container">
-			<div class="section-intro pb-60px">
-        <p>Popular Item in the market</p>
-        <h2>Top <span class="section-intro__style">Product</span></h2>
-      </div>
-			<div class="row mt-30">
-        <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-          <div class="single-search-product-wrapper">
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-1.png" alt=""></a>
-              <div class="desc">
-                  <a href="#" class="title">Gray Coffee Cup</a>
-                  <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-2.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-3.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-          </div>
-        </div>
+  </div>
+</section>
+<!-- ================ category section end ================= -->
 
-        <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-          <div class="single-search-product-wrapper">
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-4.png" alt=""></a>
-              <div class="desc">
-                  <a href="#" class="title">Gray Coffee Cup</a>
-                  <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-5.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-6.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-          <div class="single-search-product-wrapper">
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-7.png" alt=""></a>
-              <div class="desc">
-                  <a href="#" class="title">Gray Coffee Cup</a>
-                  <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-8.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-9.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-          <div class="single-search-product-wrapper">
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-1.png" alt=""></a>
-              <div class="desc">
-                  <a href="#" class="title">Gray Coffee Cup</a>
-                  <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-2.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-3.png" alt=""></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-		</div>
-	</section>
-	<!-- ================ top product area end ================= -->		
-	<!-- ================ Subscribe section start ================= -->		  
-  <section class="subscribe-position">
-    <div class="container">
-      <div class="subscribe text-center">
-        <h3 class="subscribe__title">Get Update From Anywhere</h3>
-        <p>Bearing Void gathering light light his eavening unto dont afraid</p>
-        <div id="mc_embed_signup">
-          <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe-form form-inline mt-5 pt-1">
-            <div class="form-group ml-sm-auto">
-              <input class="form-control mb-1" type="email" name="EMAIL" placeholder="Enter your email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '" >
-              <div class="info"></div>
-            </div>
-            <button class="button button-subscribe mr-auto mb-1" type="submit">Subscribe Now</button>
-            <div style="position: absolute; left: -5000px;">
-              <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-            </div>
-
-          </form>
-        </div>
-        
-      </div>
+<!-- ================ top product area start ================= -->
+<section class="related-product-area">
+  <div class="container">
+    <div class="section-intro pb-60px">
+      <p>Popular Item in the market</p>
+      <h2>Top <span class="section-intro__style">Product</span></h2>
     </div>
-  </section>
-	<!-- ================ Subscribe section end ================= -->		  
+    {% include "leSekoya/shop/_top_article.html.twig" %}
+  </div>
+</section>
+<!-- ================ top product area end ================= -->
 
 {% endblock %}
 {% block javascripts %}
 <script>
-  $(document).ready(function(){
-   //active shop
-   $('#shop').addClass('active')
+  $(document).ready(function () {
+    //active shop
+    $('#shop').addClass('active')
   })
 </script>
 {% endblock %}
