--- a/templates/macros/search.html.twig
+++ b/templates/macros/search.html.twig
@@ -1,22 +1,22 @@
 {% macro search(form) %}
-<div class="rounded pt-3 mb-3 bg-default">
+<div class="rounded pt-3 mb-3">
     <div class="container">
         {{ form_start(form,{action:path('articles'), attr:{
             id:'search-form'
         } }) }}
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12 col-12">
                 <div class="form-row ">
-                    <div class="col-6">
+                    <div class="col-md-6 col-12">
                     {{ form_row(form.minPrice)}}
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6 col-12">
                     {{ form_row(form.maxPrice)}}
                     </div>
                     {# <div class="col-4">
                     {{ form_row(form.category)}}
                     </div> #}
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                     {{ form_row(form.mots)}}
                     </div>
                     <div class="col-4">
